--- a/Source/NeuraNet/NeuraNet.csproj
+++ b/Source/NeuraNet/NeuraNet.csproj
@@ -56,6 +56,7 @@
     <Compile Include="NetworkLayout\NetworkLayoutProvider.cs" />
     <Compile Include="NeuralNetwork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrainingExample.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
